--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input class="playPicture" type="button" value="" onclick="play();">
 
     <input class="nextPicture" type="button" value="" onclick="next();">
+    <input class="nextPicture" type="button" value="" onclick="next();">
 
 </div>
 <script src="script.js"></script>
